--- a/BTL_QlBi_a/Views/Home/KhachHang.cshtml
+++ b/BTL_QlBi_a/Views/Home/KhachHang.cshtml
@@ -187,5 +187,80 @@
                 document.getElementById('summaryTongDiem').innerText = totalDiem.toLocaleString('vi-VN') + ' điểm';
                 document.getElementById('summaryTongChiTieu').innerText = totalChiTieu.toLocaleString('vi-VN') + ' đ';
             }
+
+
+            async function deleteCustomer(maKH){
+                if (!confirm('Bạn có chắc chắn muốn xóa khách hàng này không? Hành động này không thể hoàn tác.')) {
+                    return;
+                }
+
+                try{
+                    const formData = new FormData();
+                    formData.append('maKH',maKH);
+
+                    const response = await fetch('/KhachHang/XoaKhachHang',{
+                        method: 'POST',
+                        body: formData
+                    });
+
+                    const result = await response.json();
+
+                    if(result.success){
+                        alert('Đã xóa thành công!');
+                        // closeRightPanel();
+                        window.location.reload();
+                    }
+                    else{
+                        alert('Không thể xóa: ' + result.message);
+                    }
+                }
+                catch(error){
+                    console.error('Lỗi:', error);
+                    alert('Đã xảy ra lỗi khi xóa.');                
+                }
+
+            }
+
+    async function restoreCustomer(maKH) {
+        if (!confirm('Bạn có muốn khôi phục khách hàng này không?')) return;
+
+        try {
+            const formData = new FormData();
+            formData.append('maKH', maKH);
+
+            const response = await fetch('/KhachHang/KhoiPhucKhachHang', {
+                method: 'POST',
+                body: formData
+            });
+
+            const result = await response.json();
+
+            if (result.success) {
+                alert('Khôi phục thành công!');
+                // closeRightPanel();
+                window.location.reload(); // Tải lại để thấy khách hàng quay về danh sách chính
+            } else {
+                alert('Lỗi: ' + result.message);
+            }
+        } catch (error) {
+            console.error(error);
+            alert('Lỗi kết nối.');
+        }
+    }
+
+    // Xuat Bao Cao Excel
+    function exportCustomers(){
+
+        const rank = document.querySelector('.filter-btn[data-filter].active')?.dataset.filter || 'all';
+        const search = document.getElementById('searchCustomers').value;
+
+        const url = new URL('/KhachHang/ExportKhachHangToExcel', window.location.origin);
+
+        url.searchParams.append('rank',rank);
+        if(search)
+            url.searchParams.append('search',search);
+
+        window.location.href = url.toString();
+    }
          </script>
 }
