--- a/BTL_QlBi_a/Views/Home/Partials/KhachHang/_ChiTietKhachHang.cshtml
+++ b/BTL_QlBi_a/Views/Home/Partials/KhachHang/_ChiTietKhachHang.cshtml
@@ -1,4 +1,7 @@
 ﻿@model BTL_QlBi_a.Models.Entities.KhachHang
+
+<link rel="stylesheet" href="~/asset/css/qlKhachHang/chi-tiet-khach-hang.css" />
+
 @{
     string rankIcon = Model.HangTV switch
     {
