--- a/BTL_QlBi_a/Views/Home/Partials/KhachHang/_FormKhachHang.cshtml
+++ b/BTL_QlBi_a/Views/Home/Partials/KhachHang/_FormKhachHang.cshtml
@@ -1,5 +1,7 @@
 ﻿@model BTL_QlBi_a.Models.Entities.KhachHang
 
+<link rel="stylesheet" href="~/asset/css/qlKhachHang/form-khach-hang.css" />
+
 <form id="customerForm" onsubmit="saveCustomerForm(event)">
 
     @Html.AntiForgeryToken()
